plugins {
    id 'pl.kmolski.webserve.java-application-conventions'
}

group = 'pl.kmolski'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

dependencies {
    implementation project(':lib')
}

application {
    mainClass = 'pl.kmolski.webserve.app.App'
}
